k8s/database/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:11.2
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: init
          mountPath: "/docker-entrypoint-initdb.d"
      - name: phpmyadmin
        image: phpmyadmin:5
        ports:
        - containerPort: 80
      volumes:
      - name: init
        configMap:
          name: db-init-config
