k8s/database/db-service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service-ext
  namespace: ingress-ns
spec:
  type: ExternalName
  externalName: database-service.database-ns
