k8s/database/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: mariadb
  ports:
    - name: phpmyadmin
      protocol: TCP
      port: 8081
      targetPort: 80
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
